cmake_minimum_required(VERSION 3.15)

project("Pointer Arithmetic")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_pointers 1_pointers.cpp)
add_executable(2_pointers_as_function_args 2_pointers_as_function_args.cpp)
add_executable(3_pointer_addition 3_pointer_addition.cpp)
add_executable(4_pointer_subtraction 4_pointer_subtraction.cpp)
add_executable(5_pointers_and_arrays 5_pointers_and_arrays.cpp)
